fixed font and text color ui

--- a/housing_audit/src/globals.css
+++ b/housing_audit/src/globals.css
@@ -1,6 +1,7 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+@import url('https://fonts.googleapis.com/css2?family=Chelsea+Market&display=swap');
 
 :root {
   --color-palette-red: #a40000;
@@ -24,11 +25,13 @@
   color: var(--color-palette-red)
 }
 
+.font-chelsea {
+  font-family: 'Chelsea_Market', cursive;
+}
+
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+  font-family: 'Sumana', serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   
